update: main content fixed for every type of rem with new width

--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/PcSortList/SortButton/SortButton.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/PcSortList/SortButton/SortButton.module.css
@@ -3,7 +3,7 @@
 	color: rgb(153, 153, 153);
 	border: none;
 	display: flex;
-	font-size: 1.25;
+	font-size: 1.25rem;
 	font-weight: 500;
 	padding-right: 1.5rem;
 	position: relative;
