--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
@@ -52,7 +52,7 @@
 	padding-bottom: calc(100% / 3 * 4);
 }
 
-@media only screen and (min-width: 160rem) {
+@media only screen and (min-width: 1600px) {
 	.name {
 		font-size: 1rem;
 	}
