--- a/src/Shared/Card/Card.module.css
+++ b/src/Shared/Card/Card.module.css
@@ -35,7 +35,7 @@
 	padding-bottom: calc(100% / 3 * 4);
 }
 
-@media screen and (max-width: 160rem) {
+@media screen and (max-width: 1600px) {
 	.name {
 		font-size: 0.875rem;
 	}
