--- a/src/Shared/SecondNavbar/Components/SecondNavMobileLinks/SecondNavMobileLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavMobileLinks/SecondNavMobileLinks.module.css
@@ -20,8 +20,8 @@
 
 .navLinkToggleButton {
 	position: relative;
-	width: 120px;
-	height: 20px;
+	width: 7.5rem;
+	height: 1.25rem;
 	border: 1px solid rgba(255, 255, 255, 0.425);
 	background-color: transparent;
 	text-align: left;
@@ -52,18 +52,18 @@
 
 .navLinkToggleButton p {
 	color: rgba(255, 255, 255, 0.6);
+	height: 1.25rem;
 }
 
 @media only screen and (max-width: 23.4375rem) {
 	.navLinkToggleButton {
-		height: 14px;
+		height: 0.875rem;
 		padding: 0 0.125em;
-		width: 75px;
+		width: 4rem;
 	}
 	.navLinkToggleButton p {
 		font-size: 0.625rem;
-		height: 10px;
-		margin-bottom: 0.125rem;
+		height: 0.875rem;
 	}
 	.navArrow {
 		width: 0.5rem;
