--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesLists/Components/AllGamesContent/AllGamesContent/AllGamesContent.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesLists/Components/AllGamesContent/AllGamesContent/AllGamesContent.module.css
@@ -21,7 +21,7 @@
 	}
 }
 
-@media only screen and (max-width: 100rem) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 1600px) and (min-width: 48.0625rem) {
 	.cardsContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
