--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Admins/Admins.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Admins/Admins.module.css
@@ -30,7 +30,7 @@
 	margin-right: 0.5rem;
 }
 
-@media only screen and (max-width: 160rem) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 1600px) and (min-width: 48.0625rem) {
 	.adminContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
