--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Users/Users/Users.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Users/Users/Users.module.css
@@ -24,7 +24,7 @@
 	margin-bottom: 3rem;
 }
 
-@media only screen and (max-width: 160rem) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 1600px) and (min-width: 48.0625rem) {
 	.userContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
