--- a/src/Pages/MainContent/MainContent/MainContent.module.css
+++ b/src/Pages/MainContent/MainContent/MainContent.module.css
@@ -4,7 +4,7 @@
 }
 .main {
 	width: 75%;
-	max-width: 160rem;
+	max-width: 1600px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
