--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseGameCards/BrowseGameCards.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseGameCards/BrowseGameCards.module.css
@@ -18,7 +18,7 @@
 	align-items: center;
 }
 
-@media only screen and (max-width: 160rem) and (min-width: 54.0625rem) {
+@media only screen and (max-width: 1600px) and (min-width: 54.0625rem) {
 	.cardsContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
