--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
@@ -14,7 +14,7 @@
 	padding-bottom: calc(100% / 16 * 9);
 }
 
-@media screen and (max-width: 160rem) and (min-width: 56.25rem) {
+@media screen and (max-width: 1600px) and (min-width: 56.25rem) {
 	.imageContainer {
 		margin-bottom: 1rem;
 	}
