--- a/src/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
+++ b/src/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
@@ -1,8 +1,9 @@
-.DiscountPriceWithPercent {
+.discountPriceWithPercent {
 	display: flex;
 	align-items: center;
 	font-size: 0.625rem;
-	max-width: 180px;
+	max-width: 11.25rem;
+	width: 100%;
 }
 
 .discountPercentage {
