--- a/src/Shared/FirstNavbar/Components/MobileBurgerMenu/MobileBurgerMenu.module.css
+++ b/src/Shared/FirstNavbar/Components/MobileBurgerMenu/MobileBurgerMenu.module.css
@@ -4,8 +4,8 @@
 	right: 0;
 	top: 0;
 	background-color: rgb(46, 46, 46);
-	width: 55px;
-	height: 50px;
+	width: 3.4375rem;
+	height: 3.125rem;
 	border-radius: 0 0 0 20px;
 	transition:
 		width 300ms 300ms,
