--- a/src/Shared/SecondNavbar/Components/SecondNavRightLinks/SecondNavRightLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavRightLinks/SecondNavRightLinks.module.css
@@ -1,11 +1,9 @@
 .links {
 	display: flex;
 	list-style: none;
+	gap: 0.625rem;
 }
 
-.option:not(:first-child) {
-	margin-left: 0.625rem;
-}
 .option a {
 	text-decoration: none;
 	color: rgba(255, 255, 255, 0.5);
@@ -25,11 +23,10 @@
 		z-index: 1;
 		right: 0px;
 		position: absolute;
-		right: 1rem;
+		right: 0.5rem;
+		gap: 0.2rem;
 	}
-	.option:not(:first-child) {
-		margin-left: 0.3125rem;
-	}
+
 	.option a {
 		fill: rgba(255, 255, 255, 0.5);
 		transition: fill 300ms;
