--- a/src/Shared/VideoPlayer/Components/Controllers/Components/FullScreenButton/FullScreenButton/FullScreenButton.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/FullScreenButton/FullScreenButton/FullScreenButton.module.css
@@ -6,8 +6,8 @@
 	cursor: pointer;
 }
 .fullScreenButton > span {
-	width: 12px;
-	height: 12px;
+	width: 0.75rem;
+	height: 0.75rem;
 	display: block;
 }
 .fullScreenButton > span > svg {
