--- a/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/VideoPlayerToggleSwitch/VideoPlayerToggleSwitch.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/VideoPlayerToggleSwitch/VideoPlayerToggleSwitch.module.css
@@ -8,14 +8,14 @@
 	right: 10px;
 	width: auto;
 	opacity: 0;
-	scale: 0.9;
+	translate: 0 10px;
 	transition:
 		opacity 200ms,
-		scale 200ms;
+		translate 200ms;
 }
 .zoomIn {
 	opacity: 1;
-	scale: 1;
+	translate: 0;
 }
 .menuContainer h5 {
 	font-size: 0.875rem;
