--- a/src/Shared/VideoPlayer/Components/Controllers/Components/PlayPauseButton/PlayPauseButton.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/PlayPauseButton/PlayPauseButton.module.css
@@ -1,16 +1,13 @@
 .playPauseButton {
 	border: none;
 	background: none;
-	padding: 0.625em;
+	padding: 0 0.625em;
 	height: 100%;
+	display: flex;
+	align-items: center;
 	cursor: pointer;
 }
-.playPauseButton > span {
-	width: 12px;
-	height: 12px;
-	display: block;
-}
-.playPauseButton > span > svg {
-	width: 100%;
-	height: 100%;
+.playPauseButton > svg {
+	width: 0.75rem;
+	height: 0.75rem;
 }
