--- a/src/Shared/VideoPlayer/Components/Controllers/Components/VolumeButton/VolumeButton.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/VolumeButton/VolumeButton.module.css
@@ -5,12 +5,8 @@
 	height: 100%;
 	cursor: pointer;
 }
-.volumeBtn > span {
-	width: 12px;
-	height: 12px;
-	display: block;
-}
-.volumeBtn > span > svg {
-	width: 100%;
-	height: 100%;
+
+.volumeBtn > svg {
+	width: 0.75rem;
+	height: 0.75rem;
 }
