update: dashbaord update for pixel to rem

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/Components/PriceReleaseDate/ReleaseDate/ReleaseDate.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/Components/PriceReleaseDate/ReleaseDate/ReleaseDate.module.css
@@ -9,13 +9,13 @@
 	align-items: center;
 }
 .releaseDay {
-	width: 100px;
+	width: 6.25rem;
 }
 .releaseMonth {
-	width: 150px;
+	width: 9.375rem;
 }
 .releaseYear {
-	width: 100px;
+	width: 6.25rem;
 }
 .releaseComponent {
 	margin-left: 0.625em;
