--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -43,7 +43,7 @@
 }
 
 .label {
-	width: calc(100% - 10px);
+	width: calc(100% - 0.625rem);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
