--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/Components/GameInfoFieldSpecification/GameInfoFieldSpecification.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/Components/GameInfoFieldSpecification/GameInfoFieldSpecification.module.css
@@ -33,7 +33,7 @@
 }
 @media screen and (max-width: 48rem) {
 	.selectionField {
-		width: 100px;
+		width: 6.25rem;
 	}
 	.type {
 		font-size: 0.8rem;
