--- a/src/Shared/ErrorMessage/ErrorMessageBody/ErrorMessageBody.module.css
+++ b/src/Shared/ErrorMessage/ErrorMessageBody/ErrorMessageBody.module.css
@@ -13,7 +13,7 @@
 }
 
 .errorMessage {
-	width: calc(100% - 10px);
+	width: calc(100% - 0.625rem);
 	font-size: 0.9rem;
 	background-color: #cc2a24;
 	padding: 0.4375em 2.1875em 0.4375em 0.4375em;
