--- a/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
@@ -56,7 +56,7 @@
 }
 
 .label {
-	width: calc(100% - 10px);
+	width: calc(100% - 0.625rem);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
