--- a/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
+++ b/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
@@ -41,7 +41,6 @@
 .listContainer {
 	position: relative;
 	padding: 0 0.75em;
-	max-height: 410px;
 	list-style-type: none;
 }
 
@@ -55,7 +54,7 @@
 
 .item {
 	position: relative;
-	height: 40px;
+	height: 2.5rem;
 }
 
 .item button {
