update: mixEvenCard for 3 card style add

--- a/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/MixEventGameCards/MixEventGameCards.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/MixEventGameCards/MixEventGameCards.module.css
@@ -2,3 +2,9 @@
 	width: 100%;
 	margin-bottom: 4rem;
 }
+.mixEventGameCardsList {
+	width: 100%;
+	list-style-type: none;
+	display: flex;
+	gap: 1.5rem;
+}
