update: enhance hover effects and improve layout for game cards

--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
@@ -1,9 +1,6 @@
 .freeGame {
-	flex-basis: 100%;
 	cursor: pointer;
 	transition: filter 300ms;
-	display: flex;
-	flex-direction: column;
 }
 
 .gameHeader {
@@ -31,18 +28,15 @@
 	padding: 0.625em 0;
 	border-radius: 0 0 5px 5px;
 }
-.gameDetail {
-	display: flex;
-	flex-grow: 1;
-	flex-direction: column;
-}
+
 .date {
 	color: rgb(173, 173, 173);
 	flex-grow: 0;
 }
 .name {
-	margin-top: 0.625rem;
-	flex-grow: 1;
+	margin: 0.5rem 0;
+	font-weight: 500;
+	font-size: 1.2rem;
 }
 .gameDetail p {
 	font-size: 0.875rem;
