--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,10 @@ body {
 }
 
 @media (hover: hover) and (pointer: fine) {
+	.hover-shadow {
+		transition: filter 200ms;
+	}
+
 	.hover-shadow:hover {
 		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
 	}
