--- a/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
@@ -1,10 +1,29 @@
 .mixEventGameCard {
 	flex-basis: 100%;
+	display: flex;
+	flex-direction: column;
 }
+
 .imageContainer {
 	width: 100%;
 }
+
 .imageAspectRatio {
 	width: 100%;
 	padding-bottom: calc(100% * 9 / 16);
+}
+
+.cardBody {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.cardDescription {
+	margin: 0.5rem 0 1rem;
+	flex-grow: 1;
+}
+
+.cardFooter {
+	width: 100%;
 }
