--- a/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
+++ b/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
@@ -1,4 +1,4 @@
-.cards {
+.cardsContainer {
 	padding: 1.25em 0.5em;
 	margin: 0 -0.5rem;
 	max-width: 100vw;
@@ -9,12 +9,12 @@
 	list-style: none;
 	position: relative;
 	display: flex;
+	align-items: start;
 }
 .transition {
 	transition: translate 200ms;
 }
 
 .card {
-	flex-shrink: 0;
 	cursor: pointer;
 }
