update: implement ImageWithHover component and adjust button references and mixEventGameCards for widescreen complete

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,7 @@ body {
 @media (hover: hover) and (pointer: fine) {
 	.hover-shadow {
 		transition: filter 200ms;
+		cursor: pointer;
 	}
 
 	.hover-shadow:hover {
