--- a/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
@@ -1,11 +1,22 @@
 .mixEventGameCard {
 	flex-basis: 100%;
+}
+
+.onlyOne {
 	display: flex;
-	flex-direction: column;
+	gap: 1rem 3rem;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .imageContainer {
 	width: 100%;
+	border-radius: 1rem;
+	overflow: hidden;
+}
+
+.onlyOne .imageContainer {
+	flex: 1 1 60%;
 }
 
 .imageAspectRatio {
@@ -13,10 +24,9 @@
 	padding-bottom: calc(100% * 9 / 16);
 }
 
-.cardBody {
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
+.title {
+	font-weight: 500;
+	margin: 1rem 0;
 }
 
 .cardDescription {
@@ -26,4 +36,32 @@
 
 .cardFooter {
 	width: 100%;
+}
+
+.btnContainer {
+	display: flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+}
+
+.btn {
+	border: none;
+	padding: 0.8em;
+	font-weight: 500;
+	border-radius: 0.5rem;
+	cursor: pointer;
+}
+
+.btn:nth-child(odd) {
+	background-color: #ffffff20;
+	color: white;
+}
+
+.btn:nth-child(odd):hover {
+	background-color: #ffffff40;
+}
+
+.btn:nth-child(even) {
+	background-color: #ffffff;
+	color: black;
 }
