--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
@@ -72,23 +72,22 @@
 }
 
 @media only screen and (max-width: 48rem) {
+	.itemInfo {
+		display: flex;
+		width: 100%;
+		max-width: 100%;
+		max-height: 100%;
+		margin-left: 0;
+		justify-content: flex-end;
+	}
+
 	.logoContainer {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: flex-end;
-	}
-
-	.itemInfo {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		width: 100%;
-		max-width: 100%;
-		height: 10%;
-		margin-left: 0;
-		margin-bottom: 1rem;
+		max-width: 55%;
+		margin: 0 auto;
 	}
 
 	.priceContainer {
