--- a/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/MixEventGameCards/Components/MixEventGameCard/MixEventGameCard.module.css
@@ -32,7 +32,7 @@
 
 .cardDescription {
 	margin: 0.5rem 0 1rem;
-	flex-grow: 1;
+	color: #ffffff90;
 }
 
 .cardFooter {
@@ -47,7 +47,7 @@
 
 .btn {
 	border: none;
-	padding: 0.8em;
+	padding: 0.6em;
 	font-size: 1rem;
 	font-weight: 500;
 	border-radius: 0.5rem;
