--- a/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
@@ -1,10 +1,12 @@
 .extraCard {
 	width: 100%;
-	padding-bottom: calc(100% * 1 / 2.63);
+	padding-bottom: calc(100% * 1 / 2.6656);
 	background-color: rgba(255, 255, 255, 0.05);
 	border: none;
 	transition: background-color 200ms;
 	cursor: pointer;
+	position: relative;
+	display: block;
 }
 
 .extraCard:hover {
