--- a/src/Shared/GamesShowcase/Components/GamesShowcaseColumn/GamesShowcaseColumn/GamesShowcaseColumn.module.css
+++ b/src/Shared/GamesShowcase/Components/GamesShowcaseColumn/GamesShowcaseColumn/GamesShowcaseColumn.module.css
@@ -11,8 +11,15 @@
 	margin-top: 1rem;
 }
 
-.gameColumn:not(:last-child) {
-	border-right: 1px solid #333;
+.gameColumn:not(:last-child)::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 3px;
+	height: 100%;
+	translate: 2px;
+	background-color: rgba(255, 255, 255, 0.1);
 }
 
 @media only screen and (max-width: 48rem) {
