--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
@@ -15,18 +15,10 @@
 	width: 100%;
 	cursor: default;
 	position: relative;
-}
-
-.notActive {
-	cursor: pointer;
-}
-
-.notActive .thumbImage {
-	opacity: 0.5;
-}
-
-.button:hover .thumbImage {
-	opacity: 1;
+	opacity: 0.6;
+	border-radius: 2px;
+	overflow: hidden;
+	transition: opacity 300ms;
 }
 
 .videoLogo {
@@ -45,16 +37,12 @@
 	height: 100%;
 }
 
-.thumbImage {
-	left: 0;
-	top: 0;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	transition: opacity 300ms;
+.active {
+	opacity: 1;
+	outline: 1px solid #f7f7f799;
 }
 
-.active {
+.active .videoLogo {
 	opacity: 0.5;
 }
 
