update: replace aspectRatio prop with aspectRatioClassName for consistent styling

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
@@ -18,6 +18,10 @@
 	padding: 1em;
 }
 
+.aspectRatioClassName {
+	padding-bottom: 100%;
+}
+
 .cardContainerInfo {
 	margin-top: 1em;
 	color: #fff;
