--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCards/DiscoverBannerItemCard/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCards/DiscoverBannerItemCard/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
@@ -55,6 +55,10 @@
 	border-radius: 4px 0 0 4px;
 }
 
+.aspectRatioClassName {
+	padding-bottom: calc(100% / 3 * 4);
+}
+
 @media only screen and (min-width: 133.375rem) {
 	.cardName {
 		font-size: 1.5rem;
