--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
@@ -46,6 +46,10 @@
 	opacity: 0.5;
 }
 
+.aspectRatioClassName {
+	padding-bottom: calc(100% / 16 * 9);
+}
+
 @media only screen and (max-width: 89.9375rem) {
 	.individualGameBannerCard {
 		max-width: 90px;
