--- a/src/Shared/DynamicGameCards/Components/DynamicGameCard/DynamicGameCard.module.css
+++ b/src/Shared/DynamicGameCards/Components/DynamicGameCard/DynamicGameCard.module.css
@@ -19,6 +19,11 @@
 	flex: 1 1 60%;
 }
 
+.imageAspectRatio {
+	width: 100%;
+	padding-bottom: calc(100% * 9 / 16);
+}
+
 .title {
 	font-size: 1.2rem;
 	font-weight: 500;
