--- a/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
+++ b/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
@@ -11,6 +11,10 @@
 	overflow: hidden;
 }
 
+.aspectRatioClassName {
+	padding-bottom: 100%;
+}
+
 @media only screen and (max-width: 48rem) {
 	.profile {
 		display: flex;
