--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	position: relative;
+	overflow-x: hidden;
 	height: 100vh;
 }
 :not(:root):fullscreen {
