--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/SortList/SortList.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/SortList/SortList.module.css
@@ -39,6 +39,14 @@
 	color: rgba(255, 255, 255, 0.9);
 	text-decoration: underline;
 }
+.active {
+	color: rgba(255, 255, 255, 0.2);
+}
+.active:hover {
+	color: rgba(255, 255, 255, 0.2);
+	cursor: default;
+	text-decoration: none;
+}
 
 @media only screen and (min-width: 48.0625rem) {
 	.listContainer {
@@ -54,7 +62,7 @@
 	.sortButtons {
 		position: relative;
 	}
-	.sortButtons::after {
+	showMenu .sortButtons::after {
 		content: '';
 		position: absolute;
 		left: 0;
@@ -62,14 +70,6 @@
 		width: 100%;
 		height: 1px;
 		background-color: rgb(136, 136, 136);
-	}
-	.active {
-		color: rgba(255, 255, 255, 0.2);
-	}
-	.active:hover {
-		color: rgba(255, 255, 255, 0.2);
-		cursor: default;
-		text-decoration: none;
 	}
 }
 
