update: add AdaptiveGameCards component with dynamic navigation and styling, update transition timing in HorizontalCards, and refactor Discover page to use new components

--- a/src/Shared/AdaptiveGameCards/AdaptiveGameCards/AdaptiveGameCards.module.css
+++ b/src/Shared/AdaptiveGameCards/AdaptiveGameCards/AdaptiveGameCards.module.css
@@ -1,13 +1,13 @@
-.dynamicGameCards {
+.adaptiveGameCards {
 	width: 100%;
 	margin-bottom: 4rem;
 }
 
-.dynamicGameCardsContainer {
+.adaptiveGameCardsContainer {
 	overflow: hidden;
 }
 
-.dynamicGameCardsList {
+.adaptiveGameCardsList {
 	width: 100%;
 	list-style-type: none;
 	display: flex;
