update: implement AdaptiveGameCards component with new AdaptiveGameCard and AdaptiveGameCardNavigator, enhance styling and layout

--- a/src/Shared/AdaptiveGameCards/AdaptiveGameCards/AdaptiveGameCards.module.css
+++ b/src/Shared/AdaptiveGameCards/AdaptiveGameCards/AdaptiveGameCards.module.css
@@ -5,11 +5,14 @@
 
 .adaptiveGameCardsContainer {
 	overflow: hidden;
+	padding: 1rem;
+	margin: -1rem;
 }
 
 .adaptiveGameCardsList {
 	width: 100%;
 	list-style-type: none;
+	left: 0;
 	display: flex;
 	gap: 20px;
 }
