--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
@@ -15,6 +15,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgb(0, 0, 0, 0.5);
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 	outline: 2px solid rgb(207, 207, 207);
 	border-radius: 50%;
