--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -8,8 +8,8 @@
 	opacity: 0;
 	scale: 0.7;
 	background-color: #18181ce0;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
-	-web-kit-backdrop-filter: blur(5px);
 	transition:
 		opacity 200ms,
 		scale 200ms;
