--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -2,19 +2,19 @@
 	width: 100vw;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0);
+	-webkit-backdrop-filter: blur(0);
 	backdrop-filter: blur(0);
-	-web-kit-backdrop-filter: blur(0);
 	position: fixed;
 	top: 0;
 	left: 0;
 	transition:
 		background-color 200ms,
 		backdrop-filter 200ms,
-		-web-kit-backdrop-filter 200ms;
+		-webkit-backdrop-filter 200ms;
 }
 
 .shadowShow {
 	background-color: rgba(0, 0, 0, 0.6);
+	-webkit-backdrop-filter: blur(1px);
 	backdrop-filter: blur(1px);
-	-web-kit-backdrop-filter: blur(1px);
 }
