--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/Components/IndiGameAsideBodyBtn/IndiGameAsideBodyBtn.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/Components/IndiGameAsideBodyBtn/IndiGameAsideBodyBtn.module.css
@@ -1,5 +1,4 @@
 .btn {
-	text-transform: uppercase;
 	border-radius: 4px;
 	border: none;
 }
@@ -33,7 +32,7 @@
 	position: relative;
 }
 
-.cartBtn:disabled {
+.btn:disabled {
 	color: rgba(255, 255, 255, 0.6);
 	cursor: default;
 }
@@ -58,17 +57,24 @@
 	background-color: rgb(18, 18, 18);
 }
 
+.inLibrarySvg {
+	width: 1.5rem;
+	height: 1.5rem;
+	margin-right: 0.375rem;
+}
+
 .outerCircle {
 	background: rgb(0, 0, 0);
 	border-radius: 50%;
 	outline: 2px solid rgb(245, 245, 245);
-	max-width: 0.75rem;
-	max-height: 0.75rem;
-	min-width: 0.75rem;
-	min-height: 0.75rem;
-	height: 0.75rem;
+	max-width: 1rem;
+	max-height: 1rem;
+	min-width: 1rem;
+	min-height: 1rem;
+	height: 1rem;
+	width: 1rem;
+	padding: 0.1rem;
 	position: relative;
-	width: 0.75rem;
 	margin-right: 0.375em;
 	cursor: pointer;
 	transition: background-color 200ms;
