update: add GameCardManagementMenu component, refactor dotMenu handling in EditGameShowCase, and adjust CSS styles for CardDotList and GamesShowcaseColumnRow

--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -1,7 +1,7 @@
 .listContainer {
 	position: absolute;
 	list-style: none;
-	padding: 0.3125em 0.625em;
+	padding: 0em 0.625em 0.3125em 0.625em;
 	border-radius: 0.5rem;
 	overflow: hidden;
 	z-index: 1;
