--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
@@ -2,8 +2,8 @@
 	position: absolute;
 	right: 0.5rem;
 	top: 0.5rem;
-	width: 2.5rem;
-	height: 2.5rem;
+	width: 1.5em;
+	height: 1.5em;
 	border-radius: 100%;
 }
 
