--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -1,7 +1,7 @@
 .listContainer {
 	position: absolute;
 	list-style: none;
-	padding: 0em 0.625em 0.3125em 0.625em;
+	padding: 0 0.3125em 0.3125em 0.3125em;
 	border-radius: 0.5rem;
 	overflow: hidden;
 	z-index: 1;
@@ -22,15 +22,21 @@
 	scale: 1;
 }
 
+.listContainer li {
+	font-size: 0;
+}
+
 .listContainer li button {
 	width: 100%;
+	height: 100%;
+	position: relative;
 	background-color: transparent;
 	border: none;
 	color: #ffffff95;
 	font-size: 0.875rem;
+	padding: 0.5em 0;
 	text-align: center;
 	text-wrap: nowrap;
-	margin: 0.3125rem 0;
 	transition: color 200ms;
 }
 
@@ -40,11 +46,12 @@
 
 .listContainer li button::after {
 	content: '';
+	position: absolute;
 	display: block;
 	width: 100%;
+	bottom: 0;
 	height: 2px;
 	background-color: #333;
-	margin-top: 0.3125rem;
 	transition: background-color 200ms;
 }
 
