--- a/src/Shared/DiscountPrice/DiscountPrice.module.css
+++ b/src/Shared/DiscountPrice/DiscountPrice.module.css
@@ -9,9 +9,13 @@
 	column-gap: 5px;
 }
 
+.regularContainer {
+	color: rgb(145, 145, 145);
+}
+
 .regular {
 	scale: 0.9;
-	color: rgb(145, 145, 145);
+	margin-right: -1px;
 	display: inline-block;
 	text-decoration: line-through;
 	text-decoration-color: rgb(222, 222, 222);
