--- a/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
@@ -19,7 +19,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 0.2rem;
+	width: 2px;
 	height: 1.5rem;
 	background-color: white;
 }
@@ -31,6 +31,6 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 1.5rem;
-	height: 0.2rem;
+	height: 2px;
 	background-color: white;
 }
