--- a/src/Shared/AdaptiveGameCards/Components/AdaptiveGameCard/AdaptiveGameCard.module.css
+++ b/src/Shared/AdaptiveGameCards/Components/AdaptiveGameCard/AdaptiveGameCard.module.css
@@ -52,21 +52,25 @@
 
 .plus::after {
 	position: absolute;
+	content: '';
 	width: 2px;
-	height: 100%;
+	height: 2rem;
 	background-color: #ffffff;
 	left: 50%;
 	top: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1;
 }
 
 .plus::before {
 	position: absolute;
+	content: '';
 	height: 2px;
-	width: 100%;
+	width: 2rem;
 	background-color: #ffffff;
 	left: 50%;
 	top: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1;
 }
 
@@ -83,6 +87,10 @@
 
 .cardFooter {
 	width: 100%;
+}
+
+.descriptionContainer {
+	margin: 1rem 0;
 }
 
 .btnContainer {
