--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -5,12 +5,18 @@
 
 .outerOption,
 .innerOption {
-	padding: 0.6rem 0 0.6rem 0;
-	display: flex;
-	align-items: center;
+	border: none;
 	font-size: 1rem;
 	color: rgb(196, 196, 196);
 	width: 100%;
+	background-color: transparent;
+}
+
+.outerOption p,
+.innerOption p {
+	padding: 0.6rem 0 0.6rem 0;
+	display: flex;
+	align-items: center;
 }
 
 .outerOption:hover,
