--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -53,6 +53,7 @@
 
 .innerOptionsContainer {
 	width: 100%;
+	padding: 2px;
 	list-style-type: none;
 	overflow: hidden;
 	transition: height 200ms;
