--- a/src/Shared/FieldSuggestionList/Components/SuggestionListContent/SuggestionListContent.module.css
+++ b/src/Shared/FieldSuggestionList/Components/SuggestionListContent/SuggestionListContent.module.css
@@ -18,7 +18,6 @@
 	width: 100%;
 	overflow: visible;
 	position: relative;
-	padding: 0.625em 1.25em;
 	background-color: rgba(37, 37, 37, 0.7);
 	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
@@ -31,11 +30,13 @@
 }
 
 .list {
+	padding: 0.625em;
 	list-style: none;
 	overflow-y: auto;
 	width: 100%;
 	flex-grow: 1;
 }
+
 .extraSection {
 	flex-shrink: 0;
 }
