--- a/src/Shared/FieldSuggestionList/Components/SuggestionListContent/SuggestionListContent.module.css
+++ b/src/Shared/FieldSuggestionList/Components/SuggestionListContent/SuggestionListContent.module.css
@@ -23,7 +23,7 @@
 	backdrop-filter: blur(10px);
 	opacity: 0;
 	display: flex;
-	flex-direction: column;
+	align-items: center;
 	transition:
 		height 200ms,
 		opacity 300ms;
@@ -44,6 +44,10 @@
 .item {
 	position: relative;
 	height: 3.5rem;
+}
+
+.itemButton {
+	padding: 0 0.625em;
 }
 
 .item p {
