--- a/src/Shared/AdaptiveCards/Components/AdaptiveCard/AdaptiveCard.module.css
+++ b/src/Shared/AdaptiveCards/Components/AdaptiveCard/AdaptiveCard.module.css
@@ -35,7 +35,7 @@
 }
 
 .onlyOne .imageContainer {
-	flex: 1 1 60%;
+	width: 60%;
 }
 
 .imageAspectRatio {
@@ -101,6 +101,14 @@
 .cardFooter {
 	width: 100%;
 	margin-top: 1rem;
+}
+
+.editFooterBtnContainer {
+	margin-top: 1rem;
+}
+
+.editFooterBtn {
+	border-radius: 0.5rem;
 }
 
 .descriptionContainer {
